--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@ html,
 body {
     width:100%;
     height:100%;
-    background:radial-gradient(ellipse at center, #160909 0%, #160909 45%, #291111 100%);
+    background: url(imgs/pumpkin\ background.avif);
+    background-repeat:no-repeat;
+    background-attachment:fixed;
+    background-size:cover;
     display:flex;
     justify-content:center;
     align-items:center;
-    overflow:hidden;
+    overflow-x:hidden;
 }
 
 .container {
@@ -71,6 +74,7 @@ body {
     height:0;
     border-top:0.8em solid transparent;
     top:2.8em;
+   
 }
 
 .pumpkin .eye.right {
