--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ body {
     border:0.4em solid #a14907;
     border-radius:70%/110%;
     position:relative;
-    box-shadow:inset 0 0 2px #a14907, 0 0 30px -4px red;
+    box-shadow:inset 0 0 2px #a14907, 0 0 30px -4px red, 0 0 200px 100px white;
     z-index:1;
-    animation:float 3s infinite;
+    animation:float 2s infinite;
 }
 
 .pumpkin .texture {
@@ -89,6 +89,7 @@ body {
     transform:rotate(-30deg);
     border-bottom:2.1em solid transparent;
     border-right:2.4em solid #401b03;
+
 }
 
 .pumpkin .mouth {
@@ -154,7 +155,9 @@ body {
     width:230px;
     height:50px;
     border-radius:50%;
-    animation: zoom 3s infinite;
+    animation: zoom 2s infinite;
+    position:relative;
+    z-index:1;
 }
 
 @keyframes float {
@@ -163,16 +166,16 @@ body {
     }
 
     50% {
-        transform: translateY(-10%);
+        transform: translateY(-60%);
     }
 }
 
 @keyframes zoom {
     0%, 100% {
-        transform:scale(1);
+        transform:scale(1.2);
     }
 
     50% {
-        transform:scale(0.8);
+        transform:scale(0.6);
     }
 }
